exports[`ActionDropDown added data succesfully 1`] = `
<ul
  className="dropdown-menu"
  onMouseLeave={[Function onMouseLeave]}>
  <li
    className="external">
    <h3
      className="">
      <span
        className="bold">
        one Default 
      </span>
      view all
    </h3>
    <a
      className="" />
  </li>
  <li>
    <div
      className="slimScrollDiv">
      <ul
        className="dropdown-menu-list" />
      <div
        className="slimScrollBar" />
      <div
        className="slimScrollRail" />
    </div>
  </li>
</ul>
`;

exports[`ActionDropDown added to the dom successfully 1`] = `
<ul
  className="dropdown-menu"
  onMouseLeave={[Function onMouseLeave]}>
  <div />
  <li>
    <div />
  </li>
</ul>
`;

exports[`ActionDropDownError added to the dom successfully 1`] = `
<span>
  <span
    className="error" />
  <ul>
    <li
      className="divider" />
  </ul>
  <span
    className="solution" />
</span>
`;

exports[`ActionDropDownError has custom Props 1`] = `
<span>
  <span
    className="err">
    test1
  </span>
  <ul>
    <li
      className="divider" />
  </ul>
  <span
    className="sol">
    test2
  </span>
</span>
`;

exports[`ActionDropDownHeader added to the dom successfully 1`] = `
<li
  className="external">
  <h3
    className="">
    <span
      className="bold">
      one Default 
    </span>
    view all
  </h3>
  <a
    className="" />
</li>
`;

exports[`ActionDropDownHeader has custom component 1`] = `
<li
  className="external">
  <h3
    className="">
    <span
      className="bold">
      12 New 
    </span>
    notifications
  </h3>
  <a
    className="hide">
    view all
  </a>
</li>
`;

exports[`ActionDropDownInbox added to the dom successfully 1`] = `
<span>
  <span
    className="photo">
    <img
      className="img-circle"
      src="http://bit.ly/2bSKJyn" />
  </span>
  <span
    className="subject">
    <span
      className="time">
      just now
    </span>
    <span
      className="from">
      Alec
    </span>
  </span>
  <span
    className="message">
    Default message.
  </span>
</span>
`;

exports[`ActionDropDownInbox has custom Props 1`] = `
<span>
  <span
    className="Test1">
    <img
      className="Test2"
      src="test.png" />
  </span>
  <span
    className="Test3">
    <span
      className="Test4">
      just now
    </span>
    <span
      className="Test5">
      alec
    </span>
  </span>
  <span
    className="Test6">
    default message
  </span>
</span>
`;

exports[`ActionDropDownNotify added to the dom successfully 1`] = `
<span>
  <span
    className="time">
    just now
  </span>
  <span
    className="details">
    <span
      className="label label-sm label-icon label-success edited-label">
      <i
        className="fa fa-plus" />
    </span>
    this is a default message
  </span>
</span>
`;

exports[`ActionDropDownNotify has custom Props 1`] = `
<span>
  <span
    className="Test1">
    just now
  </span>
  <span
    className="Test2">
    <span
      className="Test3">
      <i
        className="icon-arrow" />
    </span>
    default message
  </span>
</span>
`;

exports[`ActionDropDownTask added to the dom successfully 1`] = `
<span>
  <span
    className="task">
    <span
      className="desc">
      Metronic V1.0
    </span>
    <span
      className="percent">
      40%
    </span>
  </span>
  <span
    className="progress">
    <span
      className="progress-bar progress-bar-success">
      <span
        className="sr-only" />
    </span>
  </span>
</span>
`;

exports[`ActionDropDownTask has custom Props 1`] = `
<span>
  <span
    className="Test1">
    <span
      className="Test2">
      Metronic V1.0
    </span>
    <span
      className="Test3">
      40%
    </span>
  </span>
  <span
    className="Test4">
    <span
      className="Test5">
      <span
        className="Test6" />
    </span>
  </span>
</span>
`;

exports[`ClickableList added to the dom successfully 1`] = `
<li
  className="">
  <a
    className="" />
</li>
`;

exports[`ClickableList has custom Props 1`] = `
<li
  className="test1">
  <a
    className="test2">
    <div
      className="alec">
      <p
        className="hello">
        Hello World
      </p>
    </div>
  </a>
</li>
`;

exports[`Divider has custom Props 1`] = `
<li
  className="Alec" />
`;

exports[`Divider successfully added into dom 1`] = `
<li
  className="divider" />
`;

exports[`Icon added custom to the dom successfully 1`] = `
<li
  className="dropdown dropdown-extended nav-dropdown isClosedisClosed"
  onClick={[Function onClick]}>
  <a
    className="dropdown-toggle">
    <i
      className="icon-fire" />
    <span
      className="badge badge-default">
      7
    </span>
  </a>
  <ul
    className="dropdown-menu"
    onMouseLeave={[Function onMouseLeave]}>
    <div />
    <li>
      <div />
    </li>
  </ul>
</li>
`;

exports[`Icon added to the dom successfully 1`] = `
<li
  className="dropdown dropdown-extended nav-dropdown isClosed"
  onClick={[Function onClick]}>
  <a
    className="dropdown-toggle">
    <i
      className="icon-plus" />
    <span
      className="badge badge-default">
      7
    </span>
  </a>
  <ul
    className="dropdown-menu"
    onMouseLeave={[Function onMouseLeave]}>
    <div />
    <li>
      <div />
    </li>
  </ul>
</li>
`;

exports[`IconProfile added to the dom successfully 1`] = `
<li>
  <a
    href="#">
    <i
      className="icon-lock">
      Lock
    </i>
  </a>
</li>
`;

exports[`Notice added to the dom successfully 1`] = `
<span
  className="badge badge-default">
  7
</span>
`;

exports[`ProfileMenu added custom to the  dom successfully 1`] = `
<ul
  className="dropdown-menu dropdown-menu-default"
  onMouseLeave={[Function onMouseLeave]}>
  <li>
    <a
      href="#">
      <i
        className="icon-lock">
        Lock
      </i>
    </a>
  </li>
  <li>
    <a
      href="#">
      <i
        className="icon-lock">
        Lock
      </i>
    </a>
  </li>
  <li
    className="divider" />
  <li>
    <a
      href="#">
      <i
        className="icon-lock">
        Lock
      </i>
    </a>
  </li>
</ul>
`;

exports[`ProfileMenu added to the dom successfully 1`] = `
<ul
  className="dropdown-menu dropdown-menu-default"
  onMouseLeave={[Function onMouseLeave]}>
  <li>
    <a
      href="#">
      <i
        className="icon-lock">
        Lock
      </i>
    </a>
  </li>
  <li>
    <a
      href="#">
      <i
        className="icon-lock">
        Lock
      </i>
    </a>
  </li>
</ul>
`;

exports[`Slider added to the dom successfully 1`] = `
<div
  className="slimScrollDiv">
  <ul
    className="dropdown-menu-list" />
  <div
    className="slimScrollBar" />
  <div
    className="slimScrollRail" />
</div>
`;

exports[`Slider has custom Props 1`] = `
<div
  className="default">
  <ul
    className="default">
    <div>
      <p>
        Hello World
      </p>
    </div>
  </ul>
  <div
    className="default" />
  <div
    className="default" />
</div>
`;

exports[`TopMenuNav added to the dom successfully 1`] = `
<div
  className="top-menu">
  <ul
    className="nav pull-right navbar-nav">
    <li
      className="divider" />
    <li
      className="dropdown dropdown-user nav-dropdown isClosed"
      onClick={[Function onClick]}>
      <a
        className="dropdown-toggle">
        <img
          alt="Image of User"
          className="img-circle"
          src="http://bit.ly/2bSKJyn" />
        <span
          className="username">
          Alec
        </span>
        <i
          className="icon-lock" />
      </a>
      <ul
        className="dropdown-menu dropdown-menu-default"
        onMouseLeave={[Function onMouseLeave]}>
        <li>
          <a
            href="#">
            <i
              className="icon-lock">
              Lock
            </i>
          </a>
        </li>
        <li>
          <a
            href="#">
            <i
              className="icon-lock">
              Lock
            </i>
          </a>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`UserIcon added to the dom successfully 1`] = `
<a
  className="dropdown-toggle">
  <img
    alt="Image of User"
    className="img-circle"
    src="http://bit.ly/2bSKJyn" />
  <span
    className="username">
    Alec
  </span>
  <i
    className="icon-lock" />
</a>
`;

exports[`UserProfile added to the dom successfully 1`] = `
<li
  className="dropdown dropdown-user nav-dropdown isClosed"
  onClick={[Function onClick]}>
  <a
    className="dropdown-toggle">
    <img
      alt="Image of User"
      className="img-circle"
      src="http://bit.ly/2bSKJyn" />
    <span
      className="username">
      Alec
    </span>
    <i
      className="icon-lock" />
  </a>
  <ul
    className="dropdown-menu dropdown-menu-default"
    onMouseLeave={[Function onMouseLeave]}>
    <li>
      <a
        href="#">
        <i
          className="icon-lock">
          Lock
        </i>
      </a>
    </li>
    <li>
      <a
        href="#">
        <i
          className="icon-lock">
          Lock
        </i>
      </a>
    </li>
  </ul>
</li>
`;
